# example-python-rust

./: Cargo.toml  README.md  pyproject.toml
python/mixed_project/: __init__.py
src/: lib.rs
